--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.24.4]",
+    "UiPath.Form.Activities": "[25.2.1]",
     "UiPath.System.Activities": "[25.2.1]",
     "UiPath.UIAutomation.Activities": "[24.10.12]",
     "UiPath.WebAPI.Activities": "[1.21.1]"
